Make sure we set_max_results when getting remaining team drives.

If the user has a large number of team drives, we fetch the list in batches. If
this value is not set then we get a small amount per batch, resulting in many
more calls to the server to get the list of drives, which degrades app startup
performance.

Bug: 874354
Change-Id: I82982a6decda3f4a342925b7b3d9872226938cd7
Reviewed-on: https://chromium-review.googlesource.com/1175520
Reviewed-by: Luciano Pacheco <lucmult@chromium.org>
Commit-Queue: Stuart Langley <slangley@chromium.org>
Cr-Commit-Position: refs/heads/master@{#583184}
Former-commit-id: c7bdcdc1640dc0b7eda62d3af3ad56c4f6c82466